# kansas

./: Cargo.toml  README.md
examples/: basic.rs  fractalzoom.rs  painter.rs
src/: color.rs  context.rs  events.rs  lib.rs  pipeline.rs
static/: frag.glsl  vert.glsl
