[package]
name = "kansas"
version = "0.1.0"
license = "Apache-2.0"
readme = "README.md"
description = "A 2d drawing + event handling api."
documentation = "https://docs.rs/kansas"
repository = "https://github.com/tinaun/kansas"
authors = ["tinaun <tinagma@gmail.com>"]
categories = ["canvas", "graphics"]

[dependencies]
gfx = "0.16"
gfx_window_glutin = "0.17"
gfx_device_gl = "0.14"
glutin = "0.9"
